# dataset

./: .gitignore  LICENSE  README.md  README_RECORDING.md  csvplot.py  dataset.py  experiment.py  main.py  prb_sequences.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
examples/: basic_usage.ipynb
examples/dynamics_model_learning/: .gitignore  README.md  export_dataset.py  modellearning_common.py  modellearning_eval.py  modellearning_multistep.py
examples/estimator/: complementary_filter.py  filter_complementary.py  filter_complementary_paper.py  fix_yaw_data.py  orientation_comparsion_onboard_vicon.py  plot_yaw_comparison.py
examples/modellarning_nn/: .gitignore  export_dataset.py  modellearning_common.py  modellearning_eval.py  modellearning_eval_paper.py  modellearning_export_to_casadi.py  modellearning_multistep.py  modellearning_multistep_paper.py  modellearning_onestep.py  mpc_example.py
examples/modellarning_nn/models/: trained_model_multistep.eqx
examples/state_estimation/: .gitignore  README.md
examples/sysid/: .gitignore  export_dataset.py  mini_wheelbot_default_parameters.json  modellearning_eom.py  wheelbot_full_eom.py  wheelbot_pitch.py  wheelbot_roll.py
examples/timeseries_classification/: .gitignore  README.md  export_dataset.py  plot_paper.py  train_transformer.py
wheelbot_dataset/: __init__.py  __main__.py  consolidate.py  download.py  example_usage.py  fix_yaw_data.py  record.py
wheelbot_dataset/recording/: __init__.py  csvplot.py  experiment.py  geometry_sequences.py  prb_sequences.py  utils.py
wheelbot_dataset/usage/: __init__.py  dataset.py  visualization.py
