[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheelbot-dataset"
version = "0.1.1"
description = "The Mini Wheelbot Dataset: High-Fidelity Data for Robot Learning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Henrik Hose", email = "henrik.hose@rwth-aachen.de"},
    {name = "Paul Brunzema", email = "brunzema@dsme.rwth-aachen.de"},
]
maintainers = [
    {name = "Henrik Hose", email = "henrik.hose@rwth-aachen.de"},
]
keywords = [
    "robotics", 
    "dataset", 
    "wheelbot", 
    "self-balancing", 
    "machine-learning",
    "dynamics", 
    "control",
    "motion-capture",
    "imu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "paramiko",
    "fire",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scipy",
]
all = [
    "scipy",
    "jax",
    "jaxlib",
    "equinox",
    "optax",
]

[project.scripts]
wheelbot-record = "wheelbot_dataset.__main__:main"

[project.urls]
Homepage = "https://github.com/wheelbot/dataset"
Repository = "https://github.com/wheelbot/dataset"

[tool.setuptools.packages.find]
where = ["."]
include = ["wheelbot_dataset*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
